--- a/src/components/goods/goods.scss
+++ b/src/components/goods/goods.scss
@@ -11,7 +11,7 @@
   align-items: flex-start;
   align-content: flex-start;
   justify-content: center;
-  gap: box.$gap-large;
+  gap: box.$gap-large-extra-2;
   font-size: 1.1rem;
 
   &__card {
