--- a/src/components/search/search.scss
+++ b/src/components/search/search.scss
@@ -73,7 +73,7 @@
     align-items: center;
     align-content: flex-start;
     justify-content: center;
-    gap: box.$gap-standard calc(box.$gap-large * 2);
+    gap: box.$gap-standard box.$gap-large * 2;
     border-right: none;
     border-bottom: box.$border-small-accent;
 
