feat: add translation functional

--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -21,7 +21,7 @@
   &__icon {
     width: 100%;
   }
-  &__button_translate {
+  &__btn_translate {
     display: flex;
     align-items: center;
     margin-left: box.$gap-standard;
