feat: translate card labels

--- a/src/components/goods/goods.scss
+++ b/src/components/goods/goods.scss
@@ -73,7 +73,7 @@
     transition: animations.$transition-medium;
   }
 
-  &__feature {
+  &__feature-wrapper {
     display: flex;
     justify-content: space-between;
 
