--- a/src/assets/sass/colors.scss
+++ b/src/assets/sass/colors.scss
@@ -6,6 +6,7 @@ $gray-light: #d6d6d6;
 $black: #000;
 $black-transparent: #0004;
 $black-transparent-dark: #000a;
+$black-transparent-dark-extra: #000d;
 
 $blue: #27f;
 
