fix: cart items translation

--- a/src/components/message/message.scss
+++ b/src/components/message/message.scss
@@ -4,8 +4,8 @@
 .message {
   &__container {
     position: absolute;
-    top: 0px;
-    left: 0px;
+    top: 0;
+    left: 0;
     width: 100%;
     padding: 7rem 1rem;
     display: flex;
