--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -51,7 +51,7 @@
     top: 0.5rem;
     left: -0.7rem;
 
-    padding: 0px box.$gap-small;
+    padding: 0 box.$gap-small;
     font-weight: bold;
 
     color: colors.$black;
@@ -75,7 +75,7 @@
       font-size: 0.7rem;
       top: 0.2rem;
       left: -0.6rem;
-      padding: 0px 3px;
+      padding: 0 3px;
     }
   }
 
@@ -97,7 +97,7 @@
       top: 0.2rem;
       left: -0.6rem;
 
-      padding: 0px 3px;
+      padding: 0 3px;
       font-weight: bold;
     }
   }
