--- a/src/index.scss
+++ b/src/index.scss
@@ -15,14 +15,14 @@
 /*** GENERAL ***/
 * {
   box-sizing: border-box;
-  margin: 0px;
-  padding: 0px;
+  margin: 0;
+  padding: 0;
   scroll-behavior: smooth;
 }
 
 html {
   font-size: 18px;
-  font-family: 'Trebuchet MS', 'Arial', sans-sedrif;
+  font-family: 'Trebuchet MS', 'Arial', sans-serif;
   color: colors.$white;
 }
 
@@ -107,7 +107,7 @@ button {
   }
 }
 
-/*** GENERAL ELEMENTS MEDIA QUEIRES ***/
+/*** GENERAL ELEMENTS MEDIA QUERIES ***/
 @media only screen and (max-width: 1000px) {
   .main {
     flex-direction: column;
