feat: add adaptive for cart

--- a/src/assets/sass/colors.scss
+++ b/src/assets/sass/colors.scss
@@ -1,6 +1,7 @@
 $white: #fff;
 
-$gray: #686868;
+$gray: #757575;
+$gray-transparent: rgba(255, 255, 255, 0.3);
 $gray-light: #d6d6d6;
 
 $black: #000;
