--- a/src/components/goods/goods.scss
+++ b/src/components/goods/goods.scss
@@ -23,7 +23,7 @@
     gap: box.$gap-small;
 
     border-radius: box.$border-radius-standard;
-    background-color: colors.$accent-transparent;
+    background-color: colors.$gray-transparent;
     color: colors.$black;
     transition: animations.$transition-medium;
     cursor: pointer;
