--- a/src/components/goods/goods.scss
+++ b/src/components/goods/goods.scss
@@ -33,11 +33,23 @@
     }
   }
 
-  &__icon_in-cart {
+  &__cart-icon-wrapper {
     position: absolute;
-    width: 2rem;
     top: box.$gap-small;
     right: box.$gap-small;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+  }
+
+  &__cart-counter {
+    margin-right: box.$gap-standard;
+    font-weight: bold;
+    transform: translateY(5px);
+  }
+
+  &__icon_in-cart {
+    width: 2rem;
   }
 
   &__title {
