refactor: card and systemMessage naming in files structure

--- a/src/components/searchMessage/searchMessage.scss
+++ b/src/components/searchMessage/searchMessage.scss
@@ -1,7 +1,7 @@
 @use '../../assets/sass/box-model' as box;
 @use '../../assets/sass/colors';
 
-.message {
+.search-message {
   &__container {
     position: absolute;
     top: 0;
