--- a/src/components/card/card.scss
+++ b/src/components/card/card.scss
@@ -13,24 +13,24 @@
   justify-content: center;
   gap: box.$gap-large-extra-2;
   font-size: 1.1rem;
+}
 
-  &__card {
-    position: relative;
-    padding: box.$gap-large;
-    width: calc(1rem * 15);
-    display: flex;
-    flex-direction: column;
-    gap: box.$gap-small;
+.card {
+  position: relative;
+  padding: box.$gap-large;
+  width: calc(1rem * 15);
+  display: flex;
+  flex-direction: column;
+  gap: box.$gap-small;
 
-    border-radius: box.$border-radius-standard;
-    background-color: colors.$gray-transparent;
-    color: colors.$black;
-    transition: animations.$transition-medium;
-    cursor: pointer;
+  border-radius: box.$border-radius-standard;
+  background-color: colors.$gray-transparent;
+  color: colors.$black;
+  transition: animations.$transition-medium;
+  cursor: pointer;
 
-    &:hover .goods__card-img {
-      @include animations.scale-small;
-    }
+  &:hover &__img {
+    @include animations.scale-small;
   }
 
   &__cart-icon-wrapper {
@@ -77,7 +77,7 @@
     overflow: hidden;
   }
 
-  &__card-img {
+  &__img {
     width: 100%;
     height: 100%;
     object-fit: contain;
