--- a/src/components/cart/cart.scss
+++ b/src/components/cart/cart.scss
@@ -19,12 +19,20 @@
     font-size: box.$gap-large-extra-2;
   }
 
-  &__btn_close {
-    position: absolute;
-    top: box.$gap-large;
-    right: box.$gap-large;
-    font-weight: bold;
-    font-size: box.$gap-large;
+  &__btn {
+    &_close {
+      position: absolute;
+      top: box.$gap-large;
+      right: box.$gap-large;
+      font-weight: bold;
+      font-size: box.$gap-large;
+    }
+
+    &_checkout {
+      font-size: 1.2rem;
+      padding: 1rem 1.5rem;
+      margin-top: box.$gap-large-extra-2;
+    }
   }
 
   &__counter {
@@ -40,6 +48,14 @@
     font-size: 2rem;
     font-weight: bold;
     transform: translateY(2px);
+  }
+
+  &__wrapper_btn {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    order: 1;
   }
 
   &__items {
