feat: add checkout functional

--- a/src/components/cart/cart.scss
+++ b/src/components/cart/cart.scss
@@ -28,7 +28,7 @@
       font-size: box.$gap-large;
     }
 
-    &_checkout {
+    &_checkout-open {
       font-size: 1.2rem;
       padding: 1rem 1.5rem;
       margin-top: box.$gap-large-extra-2;
